# Noctune

./: .env.example  .env.production.example  .gitignore  LICENSE  README.md  electron.vite.config.ts  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
electron/: main.ts
lrclib-tool/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
lrclib-tool/src/: App.vue  style.css
lrclib-tool/src-tauri/: Cargo.toml  tauri.conf.json
lrclib-tool/src-tauri/capabilities/: default.json
lrclib-tool/src-tauri/src/: main.rs
scripts/: build-installer.ps1
src/: bootstrap.ts  lyrics.ts  lyricsProvider.ts  main.tsx  storage.ts  styles.css  themes.css  update-check.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/features/lyrics/: LyricsView.tsx  useLyrics.ts
src/spotify/: api.ts  auth.ts  config.ts  pkce.ts  webPlayback.ts
src/ui/: App.tsx  appUtils.ts  cache.ts  color.ts  settings.ts  themes.ts  useAccent.ts  useAvailableUpdate.ts  volume.ts
src/ui/components/: MetadataContextMenu.tsx  PlayerDock.tsx  QueuePreview.tsx  SessionDialogs.tsx  SettingsDialog.tsx  Sidebar.tsx  TrackContextMenu.tsx  WindowControls.tsx
src/ui/views/: DevicesView.tsx  NowPlayingView.tsx  PlaylistsView.tsx  SearchView.tsx
